fixup contract reward name + spacing between filters

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     }
 }
 
+.filterElement {
+	margin: 15px;
+}
+
 .contract {
     margin: 5px;
     float: left;
